feat: rooms, dashboard, edit profile

--- a/mysite/tomato/templates/tomato/login.html
+++ b/mysite/tomato/templates/tomato/login.html
@@ -1,7 +1,7 @@
 {% extends "tomato/base_generic_no_content.html" %}
 
 {% block title %}
-    <title> Login - tomato </title>
+    <title> Login - Tomato </title>
 {% endblock %}
 
 {% block content %}
