--- a/mysite/tomato/templates/tomato/base_generic.html
+++ b/mysite/tomato/templates/tomato/base_generic.html
@@ -47,7 +47,7 @@
         <ul class="navbar-nav navbar-right">
             {% if uu %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'tomato:index' %}"
+                <a class="nav-link" href="{% url 'tomato:dashboard' %}"
                     ><span class="glyphicon glyphicon-user"></span> {{ uu.name}}</a>
             </li>
             <li class="nav-item">
