--- a/mysite/tomato/templates/tomato/base_generic_no_content.html
+++ b/mysite/tomato/templates/tomato/base_generic_no_content.html
@@ -47,8 +47,8 @@
         <ul class="navbar-nav navbar-right">
             {% if uu %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'tomato:index' %}"
-                    ><span class="glyphicon glyphicon-user"></span> {{ uu.name}}</a>
+                <a class="nav-link" href="{% url 'tomato:dashboard' %}"
+                    ><span class="glyphicon glyphicon-user"></span> {{ uu.name }}</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'tomato:logout' %}"
