feat: add order, room types

--- a/mysite/tomato/templates/tomato/base_generic_no_container.html
+++ b/mysite/tomato/templates/tomato/base_generic_no_container.html
@@ -41,7 +41,8 @@
                 <a class="nav-link" href="{% url 'tomato:index' %}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'tomato:rooms' %}">Rooms</a>
+
+                <a class="nav-link" href="{% url 'tomato:room_types' %}">Room Types</a>
             </li>
         </ul>
         <ul class="navbar-nav navbar-right">
