--- a/mysite/tomato/templates/tomato/base_generic.html
+++ b/mysite/tomato/templates/tomato/base_generic.html
@@ -36,35 +36,45 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'tomato:index' %}">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'tomato:rooms' %}">Rooms</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav navbar-right">
-            {% if uu %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'tomato:dashboard' %}"
-                    ><span class="glyphicon glyphicon-user"></span> {{ uu.name}}</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'tomato:logout' %}"
-                    ><span class="glyphicon glyphicon-log-out"></span> Logout</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'tomato:login' %}"
-                    ><span class="glyphicon glyphicon-log-in"></span>Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href=" {% url 'tomato:register' %}"
-                    ><span class="glyphicon glyphicon-user"></span>Register</a >
-            </li>
-            {% endif %}
-        </ul>
+            
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'tomato:index' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'tomato:room_types' %}">Room Types</a>
+                </li>
+                {% if role == 'customer' %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'tomato:room_types' %}">My Orders</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'tomato:room_types' %}">Search</a>
+                    </li>
+                {% endif %}
+            </ul>
+
+            <ul class="navbar-nav navbar-right">
+                {% if uu %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'tomato:dashboard' %}"
+                        ><span class="glyphicon glyphicon-user"></span> {{ uu.name}}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'tomato:logout' %}"
+                        ><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'tomato:login' %}"
+                        ><span class="glyphicon glyphicon-log-in"></span>Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href=" {% url 'tomato:register' %}"
+                        ><span class="glyphicon glyphicon-user"></span>Register</a >
+                </li>
+                {% endif %}
+            </ul>
         </div>
     </div>
 </nav>
