feat: add my_orders, change_order, order_detail...

--- a/mysite/tomato/templates/tomato/base_generic.html
+++ b/mysite/tomato/templates/tomato/base_generic.html
@@ -39,17 +39,14 @@
             
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'tomato:index' %}">Home</a>
+                    <a class="nav-link" href="{% url 'tomato:index' %}"><strong>Home</strong></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'tomato:room_types' %}">Room Types</a>
+                    <a class="nav-link" href="{% url 'tomato:room_types' %}"><strong>Room Types</strong></a>
                 </li>
                 {% if role == 'customer' %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'tomato:room_types' %}">My Orders</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'tomato:room_types' %}">Search</a>
+                        <a class="nav-link" href="{% url 'tomato:my_orders' %}"><strong>My Orders</strong></a>
                     </li>
                 {% endif %}
             </ul>
@@ -58,20 +55,20 @@
                 {% if uu %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'tomato:dashboard' %}"
-                        ><span class="glyphicon glyphicon-user"></span> {{ uu.name}}</a>
+                        ><span class="glyphicon glyphicon-user"></span><strong>{{ uu.name }}</strong></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'tomato:logout' %}"
-                        ><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+                        ><span class="glyphicon glyphicon-log-out"></span><strong>Logout</strong></a>
                 </li>
                 {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'tomato:login' %}"
-                        ><span class="glyphicon glyphicon-log-in"></span>Login</a>
+                        ><span class="glyphicon glyphicon-log-in"></span><strong>Login</strong></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href=" {% url 'tomato:register' %}"
-                        ><span class="glyphicon glyphicon-user"></span>Register</a >
+                        ><span class="glyphicon glyphicon-user"></span><strong>Register</strong></a >
                 </li>
                 {% endif %}
             </ul>
