--- a/mysite/tomato/templates/tomato/edit_profile.html
+++ b/mysite/tomato/templates/tomato/edit_profile.html
@@ -57,6 +57,10 @@
                 <td><input type="text" class="form-control" name="identity" value="{{ uu.identity }}"></td>
             </tr>
             <tr class="align-middle">
+                <td>Bank Card</td>
+                <td><input type="text" class="form-control" name="bank_card" value="{{ uu.bank_card }}"></td>
+            </tr>
+            <tr class="align-middle">
                 <td>Description</td>
                 <td><input type="text" class="form-control" name="description" value="{{ uu.description }}"></td>
             </tr>
