--- a/mysite/tomato/static/tomato/css/style.css
+++ b/mysite/tomato/static/tomato/css/style.css
@@ -3,16 +3,13 @@
 }
 a {
     text-decoration: none;
+    color: #000000;
 }
 
 a:hover {
-    text-decoration: underline;
-}
-/* .sidebar-nav {
-    padding: 0;
-    list-style: none;
+    color: #666666;
 }
 
-th, td {
-    padding: 5px;
+/* a:visited{
+    color: #979797;
 } */
