--- a/mysite/tomato/templates/tomato/base_generic.html
+++ b/mysite/tomato/templates/tomato/base_generic.html
@@ -48,6 +48,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'tomato:my_orders' %}"><strong>My Orders</strong></a>
                     </li>
+                {% elif role == 'staff' %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'tomato:today_check' %}"><strong>Today</strong></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'tomato:rooms' %}"><strong>Rooms</strong></a>
+                </li>
+                    {% if uu.job == 'm' %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'tomato:orders' %}"><strong>Orders</strong></a>
+                    </li>
+                    {% endif %}
                 {% endif %}
             </ul>
 
