--- a/mysite/tomato/templates/tomato/my_orders.html
+++ b/mysite/tomato/templates/tomato/my_orders.html
@@ -11,12 +11,12 @@
 <h1 class="h1">My Orders</h1>
 <br>
 <div class="d-grid gap-2">
-    <a class="btn btn-dark" data-bs-toggle="collapse" href="#collapseorderorder" role="button" aria-expanded="true" aria-controls="collapseorderorder">
+    <a class="btn btn-dark" data-bs-toggle="collapse" href="#collapseorder" role="button" aria-expanded="true" aria-controls="collapseorder">
         <h2 class="h2 text-center"> All Orders </h2>
     </a>
 </div>
 
-<div class="collapse show" id="collapseorderorder">
+<div class="collapse show" id="collapseorder">
     <div class="card card-body">
         {% if all_orders %}
             {% for order in all_orders %}
@@ -43,6 +43,8 @@
                                     <button type="button" class="btn btn-secondary btn-sm"><strong>F</strong></button>
                                     {% elif order.state == 'r' %}
                                     <button type="button" class="btn btn-success btn-sm"><strong>R</strong></button>
+                                    {% elif order.state == 'i' %}
+                                    <button type="button" class="btn btn-info btn-sm"><strong>I</strong></button>
                                     {% endif %}
                                     {{ order.room_type.name }} - Oasis Hotel
                                 </h5>
