feat: add BankCard

--- a/mysite/tomato/templates/tomato/order_detail.html
+++ b/mysite/tomato/templates/tomato/order_detail.html
@@ -31,7 +31,7 @@
             {% if order.room_number.floor == 0 %}
               <td>None</td>
             {% else %}
-              <td>{{ order.room_number.id }}</td>
+              <td>{{ order.room_number.room_number }}</td>
             {% endif %}
         </tr>
         <tr>
