--- a/mysite/tomato/templates/tomato/base_generic.html
+++ b/mysite/tomato/templates/tomato/base_generic.html
@@ -59,6 +59,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'tomato:orders' %}"><strong>Orders</strong></a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'tomato:overview' %}"><strong>Overview</strong></a>
+                    </li>
                     {% endif %}
                 {% endif %}
             </ul>
