--- a/mysite/tomato/templates/tomato/orders.html
+++ b/mysite/tomato/templates/tomato/orders.html
@@ -17,7 +17,7 @@
                             {{ order.check_in_date}} - 
                             {{ order.check_out_date }} |
                             {{ order.customer.name }} -
-                            {{ order.room_type.name }} -
+                            {{ order.room_type.name }}
                         </a>
                     </div>
                 </div>
