--- a/mysite/tomato/templates/tomato/base_generic.html
+++ b/mysite/tomato/templates/tomato/base_generic.html
@@ -62,6 +62,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'tomato:overview' %}"><strong>Overview</strong></a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'tomato:base_price_manage' %}"><strong>Mangement</strong></a>
+                    </li>
                     {% endif %}
                 {% endif %}
             </ul>
